--- a/6-Introduction_to_NoSQL_Databases/Lab1-MongoDB Get Started.ipynb
+++ b/6-Introduction_to_NoSQL_Databases/Lab1-MongoDB Get Started.ipynb
@@ -43,8 +43,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "88876f7b",
+   "metadata": {},
+   "source": [
+    "### Connect to mongodb server."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "c4cde376",
    "metadata": {},
    "outputs": [
@@ -67,17 +75,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd2d1775",
+   "cell_type": "markdown",
+   "id": "d0411f93",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### List databases."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e07380e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'show'), 'dbs')\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    print(client.show.dbs)\n",
+    "except Exception:\n",
+    "    print(\"Query Filed.\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e07380e7",
+   "id": "59a77a53",
    "metadata": {},
    "outputs": [],
    "source": []
